# synthetic-data-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: argilla_deployment.py  enforce_mapgie_template copy.py  fine-tune-deepseek-reasoning-sft.ipynb  fine-tune-modernbert-classifier.ipynb  fine-tune-modernbert-rag.ipynb  fine-tune-smollm2-on-synthetic-data.ipynb  hf-serverless-deployment-deepseek.py  hf-serverless-deployment.py  hf-serverless-different-model-for-completion.py  hf-serverless_deployment.py  ollama-deployment.py  ollama-different-model-for-completion.py  ollama_deployment.py  ollama_local.py  openai_deployment.py  openai_local.py  tgi_or_hf_dedicated.py  vllm-deployment.py  vllm_deployment.py
src/synthetic_dataset_generator/: _distiset.py  _inference_endpoints.py  app.py  constants.py  utils.py
src/synthetic_dataset_generator/apps/: about.py  base.py  chat.py  eval.py  rag.py  textcat.py
src/synthetic_dataset_generator/pipelines/: base.py  chat.py  eval.py  rag.py  textcat.py
